scrollbar fix

--- a/diaphragm/static/styles-legacy.css
+++ b/diaphragm/static/styles-legacy.css
@@ -3,6 +3,7 @@ html {
     height: 100%;
     font-size: 1em;
     font-family: 'PT Serif', serif;
+    overflow-y: scroll;
 }
 
 a {
